--- a/octofit-tracker/backend/requirements.txt
+++ b/octofit-tracker/backend/requirements.txt
@@ -1,3 +1,3 @@
-# Anforderungen für das Backend der OctoFit Tracker-App
+# Anforderungen für das Backend der OctoFit Tracker-Apppp
 Django>=3.2,<4.0
 psycopg2>=2.9
